<resources>
    <string name="app_name">GJU_Outgoings_App</string>
    <string name="create_an_account">Create An Account</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">E-mail</string>
    <string name="choosePassword">Choose password</string>
    <string name="rePassword">Confirm password</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="signup">SignUp</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="moreInfoHeader">You are registered please provide us with your Student ID and your field of study</string>
    <string name="studentid">StudentID</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="your_request_is_under_process_we_will_check_it_as_soon_as_possible">Your request is under process we will check it as soon as possible</string>

    <string name="facebook_app_id">837197497649647</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">c2afa8db7103f0d8e4872c237eaf5b9e</string>
    <string name="password">Password</string>


    <string-array name="Schools">
        <item>School of Applied Humanities and Languages (SAHL)</item>
        <item>School of Natural Resources Engineering and Management (SNREM)</item>
        <item>School of Architecture and Built Environment (SABE)</item>
        <item>School of Electrical Engineering and Information Technology (SEEIT)</item>
        <item>School of Applied Technical Sciences (SATS)</item>
        <item>School of Applied Medical Sciences (SAMS)</item>
        <item>School of Management and Logistic Sciences (SMLS)</item>
    </string-array>

    <string-array name="Majors">
        <item>--Select your Major--</item>
        <item>Business and Communication</item>
        <item>Translation</item>
        <item>Science in Energy Engineering</item>
        <item>Civil and Environmental Engineering</item>
        <item>Architecture</item>
        <item>Design and Visual Communication</item>
        <item>Computer Engineering</item>
        <item>Computer Science</item>
        <item>Electrical Engineering</item>
        <item>Design and Media Informatics</item>
        <item>Science in Industrial Engineering</item>
        <item>Science in Mechanical and Maintenance Engineering</item>
        <item>Mechatronics and Artificial Intelligence Engineering</item>
        <item>Mechatronics Engineering</item>
        <item>Pharmaceutical and Chemical Engineering</item>
        <item>Biomedical Engineering</item>
        <item>International Accounting</item>
        <item>Logistic Sciences</item>
        <item>Management Science</item>
        <item>Business Intelligence and Data analytics</item>
        <item>International Accounting</item>

    </string-array>

    <string-array name="cities">
        <item>--Choose a city--</item>
        <item>Albstadt</item>
        <item>Aalen</item>
        <item>Amberg</item>
        <item>Aschaffenburg</item>
        <item>Augsburg</item>
        <item>Bad Mergentheim</item>
        <item>Bayreuth</item>
        <item>Berlin</item>
        <item>Biberach</item>
        <item>Bielefeld</item>
        <item>Bingen</item>
        <item>Bochum</item>
        <item>Brandenburg</item>
        <item>Bremen</item>
        <item>Bremerhaven</item>
        <item>Coburg</item>
        <item>Cottbus</item>
        <item>Darmstadt</item>
        <item>Deggendorf</item>
        <item>Dessau</item>
        <item>Detmold</item>
        <item>Dieburg</item>
        <item>Dortmund</item>
        <item>Dresden</item>
        <item>Düsseldorf</item>
        <item>Emden</item>
        <item>Erfurt</item>
        <item>Erlangen</item>
        <item>Frankfurt</item>
        <item>Freiberg</item>
        <item>Fulda</item>
        <item>Gelsenkirchen</item>
        <item>Germersheim</item>
        <item>Giessen</item>
        <item>Göttingen</item>
        <item>Gummersbach</item>
        <item>Hamburg</item>
        <item>Hamm</item>
        <item>Heidenheim</item>
        <item>Heilbronn</item>
        <item>Hof</item>
        <item>Höxter</item>
        <item>Ingolstadt</item>
        <item>Jena</item>
        <item>Kaiserslautern</item>
        <item>Karlsruhe</item>
        <item>Kassel</item>
        <item>Kempten</item>
        <item>Koblenz</item>
        <item>Köln</item>
        <item>Köthen</item>
        <item>Krefeld</item>
        <item>Landshut</item>
        <item>Leipzig</item>
        <item>Lemgo</item>
        <item>Lippstadt</item>
        <item>Lörrach</item>
        <item>Lübeck</item>
        <item>Ludwigshafen am Rhein</item>
        <item>Magdeburg</item>
        <item>Mainz</item>
        <item>Mannheim</item>
        <item>Marburg</item>
        <item>Merseburg</item>
        <item>Mittweida</item>
        <item>München</item>
        <item>Münster</item>
        <item>Neu-Ulm</item>
        <item>Neubrandenburg</item>
        <item>Nürnberg</item>
        <item>Nürtingen</item>
        <item>Offenburg</item>
        <item>Oldenburg</item>
        <item>Osnabrück</item>
        <item>Regensburg</item>
        <item>Remagen</item>
        <item>Reutlingen</item>
        <item>Rosenheim</item>
        <item>Rüsselsheim</item>
        <item>Saar</item>
        <item>Saarbrücken</item>
        <item>Sankt Augustin</item>
        <item>Schmalkalden</item>
        <item>Schweinfurt</item>
        <item>Siegen</item>
        <item>Sigmaringen</item>
        <item>Stendal</item>
        <item>Stuttgart</item>
        <item>Trier</item>
        <item>Ulm</item>
        <item>Villingen-Schwenningen</item>
        <item>Weiden</item>
        <item>Weimar</item>
        <item>Wiesbaden</item>
        <item>Wildau</item>
        <item>Wilhelmshaven</item>
        <item>Worms</item>
        <item>Würzburg</item>
        <item>Zwickau</item>
    </string-array>

</resources>