<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.fragmentSignUp">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="@android:color/holo_blue_dark"
        android:visibility="invisible"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="35dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:text="@string/create_an_account"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints=""
            android:background="@drawable/borders"
            android:drawableStart="@drawable/ic_name"
            android:drawablePadding="15dp"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/full_name"
            android:inputType="text"
            android:padding="10dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/borders"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="15dp"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/e_mail"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints=""
            android:background="@drawable/borders"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="15dp"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/choosePassword"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints=""
            android:background="@drawable/borders"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="15dp"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/rePassword"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:paddingHorizontal="10dp"
                android:text="@string/gender"
                android:textColor="#F2A832"
                android:textSize="15sp"
                android:textStyle="bold" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#2197D8"
                android:fontFamily="@font/ubuntu_regular"
                android:paddingHorizontal="20dp"
                android:text="@string/male" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#2197D8"
                android:fontFamily="@font/ubuntu_regular"
                android:paddingHorizontal="20dp"
                android:text="@string/female" />


        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/borders"
            android:backgroundTint="#F2A832"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/do_you_have_an_account"
            android:textColor="#FF9800"
            android:textStyle="italic"
            
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="20dp"
            android:src="@drawable/ic_or_sign_up_with" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/googleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_google_button"

                />

            <ImageButton
                android:id="@+id/facebookButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ic_facebook_button" />



        </LinearLayout>


    </LinearLayout>

</RelativeLayout>